# earl

./: earl.cabal  readme.md  stack.yaml
src/: Main.hs
