name:                earl
version:             0.0.0
category:            TODO
synopsis:            A flexible redirect server

copyright:           2016 Ruud van Asseldonk
license:             Apache-2
license-file:        license

author:              Ruud van Asseldonk
maintainer:          dev@veniogames.com
homepage:            https://github.com/ruuda/earl

build-type:          Simple
cabal-version:       >=1.10

executable earl
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ruuda/earl
