name:                earl
version:             0.0.0
category:            TODO
synopsis:            A flexible redirect server

copyright:           2016 Ruud van Asseldonk
license:             Apache-2
license-file:        license

author:              Ruud van Asseldonk
maintainer:          dev@veniogames.com
homepage:            https://github.com/ruuda/earl

build-type:          Simple
cabal-version:       >=1.10

executable earl
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  build-depends: async      >= 2.1  && < 2.3
               , base       >= 4.8  && < 4.10
               , bytestring >= 0.10 && < 0.11
               , github     >= 0.14 && < 0.15
               , http-types >= 0.9  && < 0.10
               , lens       >= 4.13 && < 4.15
               , text       >= 1.2  && < 1.3
               , vector     >= 0.11 && < 0.12
               , wai        >= 3.2  && < 3.3
               , warp       >= 3.2  && < 3.3
               , wreq       >= 0.4  && < 0.5

source-repository head
  type:     git
  location: https://github.com/ruuda/earl
